src/test/ui/rustc-args-required-const2.stderr
error: this function can only be invoked directly, not through a function pointer
  --> $DIR/rustc-args-required-const2.rs:8:13
   |
LL |     let a = foo;
   |             ^^^

error: aborting due to previous error

